--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,14 @@
             <version>42.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-mock</artifactId>
+            <version>2.0.8</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
