--- a/molgenis.properties
+++ b/molgenis.properties
@@ -15,7 +15,7 @@ db_user = molgenis
 db_password = molgenis
 db_uri=jdbc:postgresql://localhost:5432/addressbook
 
-generate_Python=true
+generate_Python=false
 generate_R=false
 generate_cpp=true
 hibernate_dialect = PostgreSQL10Dialect
